# rebase-generator

./: rebase-generator.cabal
generator/: Main.hs
